--- a/functions/_i18n/locales/en.json
+++ b/functions/_i18n/locales/en.json
@@ -3,6 +3,32 @@
     "meetingTitle": "{{role}} - {{title}}"
   },
   "emails": {
+    "NhostEmail": {
+      "email-confirm-change": {
+        "subject": "Confirm your email change",
+        "title": "Change email address",
+        "description": "You have requested to change the email address for your Rolebase account. If you did not make this request, please ignore this message.",
+        "cta": "Confirm email change"
+      },
+      "email-verify": {
+        "subject": "Confirm your email address",
+        "title": "Welcome to Rolebase!",
+        "description": "To validate your account, please confirm by clicking the button below.",
+        "cta": "Confirm my email address"
+      },
+      "password-reset": {
+        "subject": "Reset your password",
+        "title": "Password change",
+        "description": "You have requested to reset your password. If you did not make this request, please ignore this message.",
+        "cta": "Change my password"
+      },
+      "signin-passwordless": {
+        "subject": "Secure login link",
+        "title": "Sign in to Rolebase",
+        "description": "Click on this one-time link to sign in to your Rolebase account.",
+        "cta": "Sign in"
+      }
+    },
     "MemberActivity": {
       "OrgInvitation": {
         "subject": "Invitation to {{org}}'s organization",
