Improve videoconf links

--- a/functions/_src/i18n/locales/en.json
+++ b/functions/_src/i18n/locales/en.json
@@ -1,6 +1,8 @@
 {
   "meetingsIcal": {
-    "meetingTitle": "{{role}} - {{title}}"
+    "title": "{{role}} - {{title}}",
+    "description": "Notes: {{url}}",
+    "description_videoConf": "Notes: {{url}}\nVideoconf: {{videoConf}}"
   },
   "emails": {
     "NhostEmail": {
