--- a/functions/_src/i18n/locales/fr.json
+++ b/functions/_src/i18n/locales/fr.json
@@ -1,6 +1,8 @@
 {
   "meetingsIcal": {
-    "meetingTitle": "{{role}} - {{title}}"
+    "title": "{{role}} - {{title}}",
+    "description": "Notes : {{url}}",
+    "description_videoConf": "Notes : {{url}}\nVisio : {{videoConf}}"
   },
   "emails": {
     "NhostEmail": {
