Change wording from "archived" to "deleted" for meetings and threads

--- a/functions/_src/i18n/locales/fr.json
+++ b/functions/_src/i18n/locales/fr.json
@@ -35,12 +35,14 @@
       "OrgInvitation": {
         "subject": "Invitation dans l'organisation {{org}}",
         "title": "Invitation dans l'organisation {{org}}",
+        "preview": "{{member}} vous invite à rejoindre {{org}} sur Rolebase.",
         "activity": "<b>{{member}}</b> vous invite à rejoindre <b>{{org}}</b> sur Rolebase.",
         "cta": "Accepter l'invitation"
       },
       "MeetingStart": {
         "subject": "{{member}} a démarré la réunion {{title}} - {{role}}",
         "title": "Réunion {{title}} - {{role}}",
+        "preview": "{{member}} a démarré la réunion !",
         "activity": "<b>{{member}}</b> a démarré la réunion !",
         "cta": "Ouvrir la réunion"
       }
