--- a/packages/webapp/src/i18n/locales/fr.json
+++ b/packages/webapp/src/i18n/locales/fr.json
@@ -324,7 +324,7 @@
   "MeetingContent": {
     "videoConf": "Rejoindre la visio",
     "notInvited": "Vous n'êtes pas invité(e) à cette réunion. Demandez à un(e) participant(e) de vous inviter si vous souhaitez la rejoindre.",
-    "archived": "Cette réunion est archivée. Vous pouvez la restaurer avec le menu en haut à droite.",
+    "archived": "Cette réunion a été supprimée. Vous pouvez la restaurer avec le menu en haut à droite.",
     "logs": "Actions pendant la réunion"
   },
   "MeetingContentEmpty": {
@@ -918,7 +918,7 @@
     "emptyDescription": "Vous pouvez envoyer un premier message 👇"
   },
   "ThreadActivityCreate": {
-    "archived": "Ce sujet est archivé. Vous pouvez le restaurer avec le menu en haut à droite.",
+    "archived": "Ce sujet a été supprimé. Vous pouvez le restaurer avec le menu en haut à droite.",
     "placeholder": "Message...",
     "poll": "Sondage",
     "defaultEntityDescription": "Sujet : {{thread}}"
