--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -410,7 +410,7 @@
     "menu": "Use a template"
   },
   "MeetingTemplateMenuList": {
-    "edit": "Edit templates"
+    "create": "Create a template"
   },
   "MeetingTemplateEditModal": {
     "headingEdit": "Meeting template",
