Add "copy link" item to menu in threads, meetings and tasks (fixes #118)

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -1043,6 +1043,7 @@
     "error": "Error",
     "name": "Name",
     "copy": "Copy",
+    "copyLink": "Copy link",
     "toastCopied": "URL copied",
     "none": "None",
     "errorOccurred": "An error occurred.",
