Add news tab to circle panel

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -64,6 +64,7 @@
   "CircleContent": {
     "notFound": "Role not found",
     "tabRole": "Role",
+    "tabNews": "News",
     "tabThreads": "Topics",
     "tabMeetings": "Meetings",
     "tabTasks": "Tasks",
