--- a/packages/webapp/src/i18n/locales/fr.json
+++ b/packages/webapp/src/i18n/locales/fr.json
@@ -64,6 +64,7 @@
   "CircleContent": {
     "notFound": "Rôle introuvable",
     "tabRole": "Rôle",
+    "tabNews": "Actualités",
     "tabThreads": "Sujets",
     "tabMeetings": "Réunions",
     "tabTasks": "Tâches",
