Add link to see next dates in recurrence

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -711,7 +711,8 @@
       "4": "Fourth",
       "-1": "Last"
     },
-    "bymonth": "In"
+    "bymonth": "In",
+    "nextDates": "See next dates"
   },
   "SearchGlobalModal": {
     "placeholder": "Search {{org}}...",
