Change labels in org creation form

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -596,7 +596,8 @@
     },
     "create": {
       "heading": "Create an organization",
-      "slug": "URL"
+      "name": "Organization name",
+      "slug": "Custom URL"
     },
     "import": {
       "heading": "Import an organization",
