--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -174,6 +174,9 @@
     "export": "Export a capture",
     "share": "Share (link & embed)"
   },
+  "CircleWithLeaderItem": {
+    "linkTooltip": "Represent the role {{role}}"
+  },
   "CurrentUserModal": {
     "heading": "My personal information",
     "email": "Email",
@@ -746,7 +749,7 @@
     "submit": "Create my account"
   },
   "SubCirclesFormControl": {
-    "roles": "Roles",
+    "roles": "Sub-Roles",
     "addRole": "Add a role"
   },
   "SubscriptionPage": {
