Small UI improvements

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -177,6 +177,9 @@
   "CircleWithLeaderItem": {
     "linkTooltip": "Represent the role {{role}}"
   },
+  "ColorController": {
+    "paletteTooltip": "Frequently used colors"
+  },
   "CurrentUserModal": {
     "heading": "My personal information",
     "email": "Email",
